--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -86,6 +86,7 @@ h2 {
 }
 
 /* USER */
+
 #profil-user {
     width:100%;
 }
@@ -109,6 +110,11 @@ h2 {
 }
 .title-collapse:hover {
     color:var(--josh-red);
+}
+
+.input-group-text {
+    font-family: var(--josh-major-font);
+    font-size:0.7rem;
 }
 
 /* INDEX */
@@ -141,11 +147,28 @@ h2 {
     color: var(--josh-green);
 }
 
-/* USER */
+/* HOME */
 
-.input-group-text {
-    font-family: var(--josh-major-font);
-    font-size:0.7rem;
+.card-deck {
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.border-success {
+    border-color: var(--josh-green) !important;
+}
+
+.card-footer {
+    border-top: 1px solid var(--josh-green);
+}
+
+.bg-dark {
+    background-color: var(--josh-grey) !important;
+}
+
+.border-success img {
+    height: 225px;
+    width: auto;
 }
 
 /* ADMIN */
