--- a/src/View/Admin/users.html.twig
+++ b/src/View/Admin/users.html.twig
@@ -20,6 +20,7 @@
                             <th>Email</th>
                             <th>Pseudo</th>
                             <th></th>
+                            <th></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -37,6 +38,12 @@
                                     <label class="custom-control-label" for="swadmin{{ user.id }}">admin</label>
                                 </div>
                             </td>
+                            <td>
+                                <div class="custom-control custom-switch">
+                                    <input type="checkbox" {% if user.is_actif == 1 %} checked {% endif %} data-user="{{ user.id }}" data-username="{{ user.firstname }} {{ user.lastname }}" class="custom-control-input is-actif-manager" id="swactif{{ user.id }}">
+                                    <label class="custom-control-label" for="swactif{{ user.id }}">actif</label>
+                                </div>
+                            </td>
                         </tr>
                     {%  endfor %}
                     </tbody>
@@ -45,17 +52,19 @@
         </div>
     </div>
 
-    <div class="toast" style="position: fixed; top: 15px; right: 15px;" id="user-toast">
-        <div class="toast-header bg-secondary">
-            <img src="/assets/images/logo/picto.svg" class="rounded mr-2" alt="...">
-            <strong class="mr-auto text-white">Joshua administration</strong>
-            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
+    {% for user in users %}
+        <div class="toast" role="alert" id="user-toast-{{ user.id }}" style="position: fixed; top: 65px; right: 15px;">
+            <div class="toast-header bg-danger">
+                <img src="/assets/images/logo/picto.svg" class="rounded mr-2" alt="...">
+                <strong class="mr-auto text-white">Joshua administration</strong>
+                <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                    <span aria-hidden="true" class="text-white">&times;</span>
+                </button>
+            </div>
+            <div class="toast-body" id="body-toast-{{ user.id }}">
+            </div>
         </div>
-        <div class="toast-body" id="body-toast">
-        </div>
-    </div>
+    {%  endfor %}
 
 {% endblock %}
 
