Definitively the end of contest creation

--- a/src/View/Admin/contest.html.twig
+++ b/src/View/Admin/contest.html.twig
@@ -85,7 +85,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text" id="basic-addon1">Image</span>
                             </div>
-                            <input type="url" class="form-control" placeholder="Paste here the url of the image" aria-describedby="basic-addon1" name="image" value="{{ contest.url }}" required>
+                            <input type="url" class="form-control" placeholder="Paste here the url of the image" aria-describedby="basic-addon1" name="image" value="{{ contest.url }}">
                         </div>
                     </div>
                     <div class="row d-flex justify-content-center">
