--- a/src/View/Admin/admin.html.twig
+++ b/src/View/Admin/admin.html.twig
@@ -19,7 +19,7 @@
                 <a class="admin_button btn btn-danger" href="/admin/addcampus">CAMPUS</a>
             </div>
             <div>
-                <a class="admin_button btn btn-danger" href="/admin/addSpecialty">LANGUAGES</a>
+                <a class="admin_button btn btn-danger" href="/admin/addSpecialty">SPECIALTY</a>
             </div>
         </div>
     </div>
