--- a/src/View/Admin/specialty.html.twig
+++ b/src/View/Admin/specialty.html.twig
@@ -15,14 +15,14 @@
               <div class="row-specialty">
                   <div class="input-group specialty mb-3 col-5">
                       <div class="input-group-prepend">
-                          <span class="input-group-text" id="basic-addon1">Language</span>
+                          <span class="input-group-text" id="basic-addon1">Specialty</span>
                       </div>
                       <input value="{{ specialty.title }}" type="text" class="form-control" name="specialty"
                              aria-label="Specialty" aria-describedby="basic-addon1">
                   </div>
                   <p class="text-white">{{ errors.error_title }}</p>
               </div>
-              <button class="btn specialty text-white " type="submit" class="btn btn-primary">Add Language</button>
+              <button class="btn specialty text-white " type="submit" class="btn btn-primary">Add Specialty</button>
           </form>
 
           <div class="container container-specialties">
