--- a/src/View/Home/home.html.twig
+++ b/src/View/Home/home.html.twig
@@ -7,7 +7,7 @@
                     <div class="card h-100 mx-auto bg-dark text-white border-success">
                         <img src="{% if contest.image is null %}/assets/images/default_contest.jpg{% else %}{{ contest.image }}{% endif %}" class="card-img-top" alt="image contest">
                         <div class="card-body">
-                            <p>{% if contest.campus is null %}ALL CAMPUS{% else %}{{ contest.campus }}{% endif %}</p>
+                            <p>{% if contest.campus is null %}ALL CAMPUS{% else %}{{ contest.campus|upper }}{% endif %}</p>
                             <h5 class="card-title">{{ contest.name }}</h5>
                             <p class="card-text">{{ contest.description }}</p>
                         </div>
