--- a/src/View/User/register.html.twig
+++ b/src/View/User/register.html.twig
@@ -56,7 +56,7 @@
                         </div>
                         <input type="password" class="form-control" id="password" name="password" value="">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-secondary show-pass" onmousedown="showPassword('password')" onmouseup="hidePassword('password')" type="button" id="button-addon">
+                            <button class="btn btn-outline-secondary show-pass show-hide-pass" data-target="password" type="button" id="button-password">
                                 <i class="fa fa-eye"></i>
                             </button>
                         </div>
@@ -70,7 +70,7 @@
                         </div>
                         <input type="password" class="form-control" id="passwordcopy" name="passwordcopy" value="">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-secondary show-pass" onmousedown="showPassword('passwordcopy')" onmouseup="hidePassword('passwordcopy')" type="button" id="button-addon2">
+                            <button class="btn btn-outline-secondary show-pass show-hide-pass"  data-target="passwordcopy" type="button" id="button-password-copy">
                                 <i class="fa fa-eye"></i>
                             </button>
                         </div>
