--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -77,9 +77,10 @@ h2 {
 }
 
 .timer {
-    padding:6px 7px;
+    padding:6px 12px;
     border:1px solid #fff;
     color:#fff;
+    text-shadow: 0px 0px 6px rgba(255,255,255, 0.9);
 }
 
 /* ****************************************** */
