--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14,6 +14,10 @@
     --josh-red : #e0013f;
 }
 
+main {
+    min-height: calc(100vh - 77px - 148px - 16px);
+}
+
 /* ****************************************** */
 /* ***************  GENERAL  **************** */
 /* ****************************************** */
@@ -75,6 +79,14 @@ h2 {
 .list-group-item {
     border-color: #adce86;
 }
+
+.timer {
+    padding:6px 12px;
+    border:1px solid #fff;
+    color:#fff;
+    text-shadow: 0px 0px 6px rgba(255,255,255, 0.9);
+}
+
 /* ****************************************** */
 /* *********  BOOTSTRAP SURCHARGE  ********** */
 /* ****************************************** */
@@ -188,6 +200,12 @@ h2 {
     text-transform: uppercase;
 }
 
+.btn-success {
+    border-radius: 10px;
+    background-color: var(--josh-green);
+    color: var(--josh-grey);
+}
+
 /* ADMIN */
 
 /* //////////// ADMIN USERS */
@@ -255,6 +273,20 @@ nav .nav-link:hover {
 nav .nav-link {
     font-size: 1.1rem;
     font-variant-caps: small-caps;
+}
+
+/* _Footer */
+
+.page-footer {
+    margin-top: 25px;
+    border-top: 1px solid var(--josh-green);
+    background-color: var(--josh-grey);
+}
+
+.page-footer img {
+    width: 50px;
+    height: auto;
+    color: #e0013f;
 }
 
 /* Specialty */
