--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -53,6 +53,8 @@
     </div>
 {% endblock %}
 
+{% block footer %}{% endblock %}
+
 {%  block javascript %}
 <script src="/assets/js/userForm.js"></script>
 {% endblock %}
