--- a/src/View/Components/_footer.html.twig
+++ b/src/View/Components/_footer.html.twig
@@ -1,3 +1,34 @@
-<footer>
+<footer class="page-footer">
+
+    <div class="container">
+        <div class="row justify-content-center mt-4 mb-4">
+            <div class="align-self-center">
+
+                    <!-- Facebook -->
+                    <a href="https://www.facebook.com/WildCodeSchool/">
+                        <img src="/assets/images/button/facebook.svg">
+                    </a>
+                    <!-- Twitter -->
+                    <a href="https://twitter.com/wildcodeschool">
+                        <img src="/assets/images/button/twitter.svg">
+                    </a>
+                    <!-- Linkedin -->
+                    <a href="https://www.linkedin.com/school/wild-codes-chool/">
+                        <img src="/assets/images/button/linkedin.svg">
+                    </a>
+                    <!-- Youtube -->
+                    <a href="https://www.youtube.com/channel/UCi99G_0QPx5sYsK8zdvQzfw">
+                        <img src="/assets/images/button/youtube.svg">
+                    </a>
+                    <!-- Github -->
+                    <a href="https://github.com/WildCodeSchool">
+                        <img src="/assets/images/button/github.svg">
+                    </a>
+
+            </div>
+        </div>
+    </div>
+
+    <p class="text-center text-white">Project 2 PHP 2020 - <a href="https://wildcodeschool.com/">Wild Code School</a></p>
 
 </footer>
