--- a/src/View/Admin/contest_edit.html.twig
+++ b/src/View/Admin/contest_edit.html.twig
@@ -1,36 +1,25 @@
 {% extends 'layout.html.twig' %}
 
-{% block title %}Contest manager{% endblock %}
+{% block title %}Contest editor{% endblock %}
 
 {% block content %}
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 text-center">
-                <h1>Contest manager</h1>
+                <h1>Contest editor</h1>
             </div>
         </div>
         <div class="row">
             <div class="col-4 offset-1">
                 <div class="text-center pb-3">
-                    <h2>Existing contests</h2>
+                    <h2>Select challenges</h2>
                 </div>
                 <div class="row list-container overflow-auto">
                     <ul class="list-group col-12">
-                        {% for contest in contests|reverse %}
-                        <li class="list-group-item list-group-item-dark rounded-sm p-1 pl-2 mb-2">
-                            <p class="mb-0 existing_challenge pb-1"><i class="fa fa-flag"></i> {{ contest.name }}</p>
-                            <div class="row col-12">
-                                <a class="btn btn btn-dark text-white rounded-sm mr-4 mt-1 p-1 pl-2 pr-2" href="/admin/editcontest/?id={{ contest.id }}">Edit</a>
-                                <div class="custom-control custom-switch mt-2 mr-4">
-                                    <input type="checkbox" class="custom-control-input manage-contest-active" id="active-{{ contest.id }}" data-target="{{ contest.id }}" {% if (contest.is_actif == '1') %} checked {% endif %}>
-                                    <label class="custom-control-label" for="active-{{ contest.id }}">Active</label>
-                                </div>
-                                <div class="custom-control custom-switch mt-2">
-                                    <input type="checkbox" class="custom-control-input manage-contest-display" id="display-{{ contest.id }}" data-target="{{ contest.id }}" {% if (contest.is_visible == '1') %} checked {% endif %}>
-                                    <label class="custom-control-label" for="display-{{ contest.id }}">Display</label>
-                                </div>
-                            </div>
-                        </li>
+                        {% for challenge in challenges|reverse %}
+                            <li class="list-group-item list-group-item-dark rounded-sm p-1 pl-2 mb-2">
+                                <p class="mb-0 existing_challenge pb-1"><i class="fa fa-flag"></i> {{ challenge.name }}</p>
+                            </li>
                         {% endfor %}
                     </ul>
                 </div>
@@ -39,7 +28,7 @@
                 <form action="" method="post">
                     <div class="row d-flex justify-content-center">
                         <div class="text-center pb-3">
-                            <h2>Create a contest</h2>
+                            <h2>Modify your contest</h2>
                         </div>
                     </div>
                     <div class="row d-flex justify-content-center">
@@ -47,7 +36,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text" id="basic-addon1">Title</span>
                             </div>
-                            <input type="text" class="form-control" placeholder="Max 30 characters" aria-describedby="basic-addon1" name="name" value="{{ contest.name }}" required>
+                            <input type="text" class="form-control" placeholder="Contest title" aria-describedby="basic-addon1" name="name" value="{{ contest.name }}" required>
                         </div>
                     </div>
                     <div class="row d-flex justify-content-center">
@@ -84,17 +73,13 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text" id="basic-addon1">Image</span>
                             </div>
-                            <input type="url" class="form-control" placeholder="Paste here the url of the image" aria-describedby="basic-addon1" name="image" value="{{ contest.url }}">
+                            <input type="url" class="form-control" placeholder="Paste here the url of the image" aria-describedby="basic-addon1" name="image" value="{{ contest.image }}">
                         </div>
                     </div>
                     <div class="row d-flex justify-content-center">
                         <div class="form-group">
-                            <button type="submit" name="createFullContest" class="align-self-center btn btn-dark text-white">Next step (add challenges) <i class="fa fa-arrow-right"></i></button>
-                        </div>
-                    </div>
-                    <div class="row d-flex justify-content-center">
-                        <div class="form-group">
-                            <button type="submit" name="createBlankContest" class="align-self-center btn btn-dark text-white">Create a blank contest <i class="fa fa-save"></i></button>
+                            <button type="submit" name="saveContest" class="align-self-center btn btn-dark text-white">Save your contest <i class="fa fa-save"></i></button>
+                            <button type="submit" name="deleteContest" class="align-self-center btn delete-btn text-white">Delete <i class="fa fa-trash"></i></button>
                         </div>
                     </div>
                 </form>
