--- a/src/View/Home/home.html.twig
+++ b/src/View/Home/home.html.twig
@@ -6,7 +6,7 @@
             {% for contest in contests %}
                 <div class="col mb-3">
                     <div class="card h-100 mx-auto bg-dark text-white border-success">
-                        <p class="badge badge-success">{% if contest.campus is null %}ALL CAMPUS{% else %}{{ contest.campus|upper }}{% endif %}</p>
+                        <p class="badge badge-success">{{ contest.campus|upper }}</p>
                         <img src="{% if contest.image is null %}/assets/images/default_contest.jpg{% else %}{{ contest.image }}{% endif %}"
                              class="card-img-top" alt="image contest">
                         <div class="card-body">
@@ -36,7 +36,7 @@
 <script src="/assets/js/contestTimer.js"></script>
 {% for contest in contests %}
 <script>
-    let timer{{ contest.id }} = new contestTimer('{{ contest.end_date }}', 'contest-timer{{ contest.id }}');
+    let timer{{ contest.id }} = new contestTimer('{{ contest.end_date }}', 'contest-timer{{ contest.id }}', ['h ', 'm ', 's ']);
 </script>
 {% endfor %}
 {% endblock %}
