--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -348,6 +348,7 @@ h2 {
 
 .ranking li .score {
     float: right;
+}
 
 .badge-success {
     background-color: var(--josh-green);
@@ -445,7 +446,6 @@ nav .nav-link {
 
 .page-footer {
     margin-top: 25px;
-    border-top: 1px solid var(--josh-green);
     background-color: var(--josh-grey);
 }
 
