--- a/src/View/Home/home.html.twig
+++ b/src/View/Home/home.html.twig
@@ -16,7 +16,9 @@
                         <div class="card-footer">
                             {% if contest.active == true %}
                                 <p class="float-left margin-duration" id="contest-timer{{ contest.id }}"></p>
-                                <button class="btn btn-dark float-right">Let's Go !</button>
+                                <a href="/contest/play/{{ contest.id }}">
+                                    <button class="btn btn-dark float-right">Let's Go !</button>
+                                </a>
                             {% else %}
                                 <p class="float-left margin-duration">Duration : {{ contest.formatted_duration.hours }}h {% if contest.formatted_duration.minutes != 0 %}{{ contest.formatted_duration.minutes }}m{% endif %}</p>
                                 <button class="btn btn-dark float-right">Soon !</button>
