--- a/src/View/Components/_footer.html.twig
+++ b/src/View/Components/_footer.html.twig
@@ -2,26 +2,25 @@
 
     <div class="container">
         <div class="row justify-content-center mt-4 mb-4">
-            <div class="align-self-center">
-
+            <div class="align-self-center icons-footer">
                     <!-- Facebook -->
-                    <a href="https://www.facebook.com/WildCodeSchool/">
+                    <a href="https://www.facebook.com/WildCodeSchool/" class="rs-icon">
                         <img src="/assets/images/button/facebook.svg">
                     </a>
                     <!-- Twitter -->
-                    <a href="https://twitter.com/wildcodeschool">
+                    <a href="https://twitter.com/wildcodeschool" class="rs-icon">
                         <img src="/assets/images/button/twitter.svg">
                     </a>
                     <!-- Linkedin -->
-                    <a href="https://www.linkedin.com/school/wild-codes-chool/">
+                    <a href="https://www.linkedin.com/school/wild-codes-chool/" class="rs-icon">
                         <img src="/assets/images/button/linkedin.svg">
                     </a>
                     <!-- Youtube -->
-                    <a href="https://www.youtube.com/channel/UCi99G_0QPx5sYsK8zdvQzfw">
+                    <a href="https://www.youtube.com/channel/UCi99G_0QPx5sYsK8zdvQzfw" class="rs-icon">
                         <img src="/assets/images/button/youtube.svg">
                     </a>
                     <!-- Github -->
-                    <a href="https://github.com/WildCodeSchool">
+                    <a href="https://github.com/WildCodeSchool" class="rs-icon">
                         <img src="/assets/images/button/github.svg">
                     </a>
 
@@ -29,6 +28,6 @@
         </div>
     </div>
 
-    <p class="text-center text-white">Project 2 PHP 2020 - <a href="https://wildcodeschool.com/">Wild Code School</a></p>
+    <p class="text-center text-white">Project 2 PHP 2020 - <a href="https://wildcodeschool.com/" class="text-white">Wild Code School</a></p>
 
 </footer>
