Rectifications of CSS to make it work smoothly

--- a/src/View/Admin/contest_edit.html.twig
+++ b/src/View/Admin/contest_edit.html.twig
@@ -45,7 +45,7 @@
                                 <label class="input-group-text" for="campus" id="inputGroup-campus">Campus</label>
                             </div>
                             <select class="custom-select" id="campus" name="campus" required>
-                                <option value="0">All campus</option>
+                                <option value="0">All campuses</option>
                                 {% for campus in campuses %}
                                     <option value="{{ campus.id }}" {% if contest.campus_id == campus.id %}selected{% endif %}>{{ campus.city }}</option>
                                 {% endfor %}
