--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2,6 +2,7 @@
 @import "admin.css";
 @import "user.css";
 @import "contest.css";
+@import "error404.css";
 
 @font-face {
     font-family: 'pixelmix';
