user is redirected to result page at the end of last challenge

--- a/src/View/Contests/play.html.twig
+++ b/src/View/Contests/play.html.twig
@@ -47,17 +47,19 @@
                 </p>
                 <p class="text-grey-light">When done, paste you solution below <span class="cursor"></span></p>
                 <form id="form-flag">
-                    <input type="hidden" name="challenge-id" id="challenge-id" value="{{ challengeOnTheWay.id }}">
-                    <input type="hidden" name="contest-id" id="contest-id" value="{{contest.id}}">
-                    <input type="hidden" name="challenge-order" id="challenge-order" value="{{challengeOnTheWay.order_challenge}}">
-                    <input type="text" name="flag" id="flag" placeholder="your solution" value="">
-                    <input type="submit" class="btn btn-dark text-white go-to-flag" value="Try it"> <i id="spinner-solution" class="fa fa-spinner fa-spin text-white hide"></i>
+                    <div id="solution-form">
+                        <input type="hidden" name="challenge-id" id="challenge-id" value="{{ challengeOnTheWay.id }}">
+                        <input type="hidden" name="contest-id" id="contest-id" value="{{contest.id}}">
+                        <input type="hidden" name="challenge-order" id="challenge-order" value="{{challengeOnTheWay.order_challenge}}">
+                        <input type="text" name="flag" id="flag" placeholder="your solution" value="">
+                        <input type="submit" class="btn btn-dark text-white go-to-flag" value="Try it"> <i id="spinner-solution" class="fa fa-spinner fa-spin text-white hide"></i>
+                    </div>
                     <div class=" alert-danger w-70 mgt-20 game-message" id="error-message"></div>
                 </form>
             </div>
             <div class="col-12 col-md-3 text-white">
                 <img src="https://avatars.githubusercontent.com/{{ github }}?s=75" class="img-thumbnail rounded-circle"><br>
-                <small class="text-white">Il vous reste :</small>
+                <small class="text-white">You have left :</small>
                 {% include 'Components/_contest_timer.html.twig' %}
                 <div class="steper">
                     {% for challenge in challenges %}
@@ -84,6 +86,27 @@
             {% endif %}
         </div>
     </div>
+
+    <div class="modal" tabindex="-1" role="dialog" id="modal-success">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header text-left">
+                    <h5 class="modal-title text-left">Congratulations {{ session.pseudo }}</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body text-left">
+                    <p>You have successfully completed all steps.</p>
+                </div>
+                <div class="modal-footer d-flex justify-content-start">
+                    <a class="btn btn-success " href="/contest/results/{{ contest.id }}">Go to last step</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 {% endblock %}
 
 {% block javascript %}
